--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,25 @@
+body {
+  background-image: url("../public/space-bj.avif");
+}
+
 #container {
   text-align: center;
   width: 75%;
   margin: 5rem auto 0;
+  background-color: #1a1a1a;
+  color: aliceblue;
+  border-radius: 20px;
+}
+
+#planets {
+  border: 2px solid white;
+  border-radius: 20px;
 }
 
 #btnSide {
   padding: 3rem 0;
-  background-color: red;
-  border-radius: 20px 20px 0 0;
 }
 
 #contentSide {
   height: 600px;
-  background-color: green;
-  border-radius: 0 0 20px 20px;
 }
