--- a/src/components/Box/Box.css
+++ b/src/components/Box/Box.css
@@ -2,7 +2,7 @@ li {
   font-size: 1.3rem;
   border-radius: 50%;
   padding: 0.8rem 1.2rem;
-  border: 2px solid black;
+  border: 2px solid white;
   display: inline-block;
   margin: 0 0.5rem;
   cursor: pointer;
