fixed saturn img

--- a/src/components/TabContent/TabContent.css
+++ b/src/components/TabContent/TabContent.css
@@ -16,6 +16,10 @@
   max-height: 500px;
 }
 
+.leftSide img.Saturn {
+  max-height: 450px;
+}
+
 .leftSide {
   justify-content: center;
   align-items: center;
