--- a/src/components/Box/Box.css
+++ b/src/components/Box/Box.css
@@ -7,9 +7,29 @@ li {
   margin: 0 0.5rem;
   cursor: pointer;
   transition: background-color 0.7s;
+  font-family: "Outfit", sans-serif;
+  font-weight: 700;
 }
 
 li:hover {
   background-color: aliceblue;
   color: black;
+}
+
+@media screen and (max-width: 1650px) {
+  li {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 1450px) {
+  li {
+    font-size: 0.9rem;
+  }
+}
+
+@media screen and (max-width: 1380px) {
+  li {
+    margin: 0.5rem;
+  }
 }
