semplified, added style active and children removed

--- a/src/components/Box/Box.css
+++ b/src/components/Box/Box.css
@@ -16,6 +16,11 @@ li:hover {
   color: black;
 }
 
+li.isActive {
+  background-color: aliceblue;
+  color: black;
+}
+
 @media screen and (max-width: 1650px) {
   li {
     font-size: 1rem;
